# mathilda

./: .gitignore  ALGEBRAIC_EXTENSION_ARITHMETIC_PLAN.md  CANCEL_IMPROVEMENT_PLAN.md  CHERRY_BLOCKERS.md  CHERRY_DESIGN.md  CHERRY_GAUSSIAN_PLAN.md  CHERRY_PLAN.md  CLAUDE.md  CRCIntegralsCorpus.m  DIFFUNDERINT_BLOCKERS.md  EVAL_IMPROVEMENTS_PLAN.md  EVAL_SYMTAB_IMPROVEMENTS.md  FACTOR_PLAN.md  FLINT_ACCELERATION_SWEEP.md  FLINT_NATIVE.md  GEMINI.md  GOURSAT_EXERCISES.md  GOURSAT_INTEGRAL_PLAN.md  GOURSAT_MISSING_CASE.md  INTEGRATE_PLAN.md  IntegrateRationalInlineCases.m  IntegrateRationalTests.m  KNOWLES_DESIGN.md  KNOWLES_FUTURE.md  MATHILDA_BUGS.md  MATHILDA_REVIEW.md  MEMORY_LEAKS.md  MPFR_bugs.md  Mathilda_arithmetic_blog.md  Mathilda_limits_blog.md  Mathilda_spec.md  NPRODUCT_PLAN.md  POSSIBLE_ZEROQ_FAILURES.md  PRODUCT_DEVEL_PLAN.md  PRODUCT_PLAN.md  Q_ISQRTD_STRENGTHENING_SCOPE.md  RATCANON_REWRITE_PLAN.md  README.md  RISCH_BRONSTEIN_GAPS.md  RISCH_COMPLETENESS_PLAN.md  (+22 more)
blogs/: Mathilda_blog.md  Mathilda_eigenvalues_blog.md  Mathilda_functional_blog.md  Mathilda_patterns_blog.md  Mathilda_series_blog.md
comparisons/: INTERPOLATION_COMPARISON.md  LU_DECOMPOSITION_COMPARISON.md  NDARRAY_REDUCTIONS_COMPARISON.md  QR_DECOMPOSITIONS_COMPARISON.md  ndarray_reductions_bench.sh
docs/: appstore.md  building.md  canvas-library-plan.md  canvas-plan.md  extending.md  flint-offload.md  frontend-research.md
examples/: association-benchmarks.md  association_bench.m  (+11 more)
frontend/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json  tauri.ios.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  ffi.rs  kernel.rs  kernel_ffi.rs  lib.rs
(+3288 files in other folders)
