[package]
name = "mathilda-notebook"
version = "0.1.0"
description = "Mathilda CAS Notebook"
authors = ["Michael Sollami"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log   = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs    = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
log         = "0.4"
tokio       = { version = "1", features = ["full"] }

# Android embeds the internal module tree (init.m + tables) in the binary and
# extracts it at startup, since APK-bundled assets are not fopen()-able by the
# C kernel. Other targets bundle it as a normal app resource instead.
[target.'cfg(target_os = "android")'.dependencies]
include_dir = "0.7"
